--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/metadataEditor/gallery.xhtml
@@ -19,43 +19,42 @@
     <p:panel id="galleryWrapperPanel" styleClass="wrapperPanel">
 
         <h:form id="imagePreviewForm" style="height: 100%">
-            <span id="imageData" data-image="#{request.contextPath}#{Metadaten.currentImage}"/>
-            <p:panelGrid id="imageControlPanel"
-                         columns="3"
-                         rendered="#{Metadaten.imageListExistent}"
+            <span id="imageData" data-image="#{request.contextPath}#{MetadataProcessor.currentImage}"/>
+            <p:panelGrid id="imageControlPanel" columns="3"
+                         rendered="#{MetadataProcessor.imageListExistent}"
                          style="right: 17px; top: 9px; position: absolute;">
                 <p:column>
                     <p:commandButton id="listViewButton"
                                      update="imagePreviewForm galleryHeadingWrapper"
                                      icon="fa fa-list"
-                                     styleClass="#{Metadaten.viewMode eq 'list' ? 'active' : 'inactive'}">
-                        <f:setPropertyActionListener value="list" target="#{Metadaten.viewMode}"/>
+                                     styleClass="#{MetadataProcessor.viewMode eq 'list' ? 'active' : 'inactive'}">
+                        <f:setPropertyActionListener value="list" target="#{MetadataProcessor.viewMode}"/>
                     </p:commandButton>
                 </p:column>
                 <p:column>
                     <p:commandButton id="gridViewButton"
                                      update="imagePreviewForm galleryHeadingWrapper"
                                      icon="fa fa-th-large"
-                                     styleClass="#{Metadaten.viewMode eq 'grid' ? 'active' : 'inactive'}">
-                        <f:setPropertyActionListener value="grid" target="#{Metadaten.viewMode}"/>
+                                     styleClass="#{MetadataProcessor.viewMode eq 'grid' ? 'active' : 'inactive'}">
+                        <f:setPropertyActionListener value="grid" target="#{MetadataProcessor.viewMode}"/>
                     </p:commandButton>
                 </p:column>
                 <p:column>
                     <p:commandButton id="previewButton"
                                      update="imagePreviewForm galleryHeadingWrapper"
                                      icon="fa fa-image"
-                                     styleClass="#{Metadaten.viewMode eq 'preview' ? 'active' : 'inactive'}">
-                        <f:setPropertyActionListener value="preview" target="#{Metadaten.viewMode}"/>
+                                     styleClass="#{MetadataProcessor.viewMode eq 'preview' ? 'active' : 'inactive'}">
+                        <f:setPropertyActionListener value="preview" target="#{MetadataProcessor.viewMode}"/>
                     </p:commandButton>
                 </p:column>
             </p:panelGrid>
 
-            <p:panel rendered="#{not Metadaten.imageListExistent}">
+            <p:panel rendered="#{not MetadataProcessor.imageListExistent}">
                 <p:outputLabel for="tifFolders" value="#{msgs.currentFolder}" style="vertical-align: top"/>
-                <p:selectOneMenu id="tifFolders" value="#{Metadaten.currentTifFolder}" converter="#{URIConverter}" style="margin: 0 5px">
+                <p:selectOneMenu id="tifFolders" value="#{MetadataProcessor.currentTifFolder}" converter="#{URIConverter}" style="margin: 0 5px">
                     <f:selectItem value="#{null}" itemLabel="Please select a tiff folder!" noSelectionOption="true"/>
-                    <f:selectItems value="#{Metadaten.allTifFolders}"/>
-                    <f:ajax listener="#{Metadaten.updateImagesFolder()}"/>
+                    <f:selectItems value="#{MetadataProcessor.allTifFolders}"/>
+                    <f:ajax listener="#{MetadataProcessor.updateImagesFolder()}"/>
                 </p:selectOneMenu>
                 <p:commandButton id="readImagesButton"
                                  value="#{msgs.generatePNGs}"
@@ -64,45 +63,45 @@
             </p:panel>
 
             <!-- Pages in structured view -->
-            <ui:fragment rendered="#{Metadaten.viewMode eq 'list' and Metadaten.imageListExistent}">
+            <ui:fragment rendered="#{MetadataProcessor.viewMode eq 'list' and MetadataProcessor.imageListExistent}">
                 <p:fieldset id="structuredPagesField">
                     <p:dataList id="structuredPages"
                                 var="structureElement"
-                                value="#{Metadaten.allStructureElements}"
+                                value="#{MetadataProcessor.allStructureElements}"
                                 type="definition"
                                 binding="#{currentElement}">
                         <h:outputText value="#{structureElement.getDocStructType().getNameByLanguage(LanguageForm.locale)}" style="font-weight: bold;"/>
                         <p:dataList styleClass="structureElementDataList"
                                     id="structureElementDataList"
                                     var="page"
-                                    value="#{Metadaten.getPageReferencesToDocStruct(structureElement)}"
+                                    value="#{MetadataProcessor.getPageReferencesToDocStruct(structureElement)}"
                                     binding="#{structuredThumbnail}">
-                            <ui:param name="filePath" value="#{Metadaten.getPageImageFilePath(page)}"/>
-                            <p:panel id="structuredPagePanel" header="#{msgs.image} #{Metadaten.getPhysicalPageNumber(page)} , #{msgs.page} #{Metadaten.getLogicalPageNumber(page)}" rendered="#{Metadaten.isAccessGranted(filePath)}">
+                            <ui:param name="filePath" value="#{MetadataProcessor.getPageImageFilePath(page)}"/>
+                            <p:panel id="structuredPagePanel" header="#{msgs.image} #{MetadataProcessor.getPhysicalPageNumber(page)} , #{msgs.page} #{MetadataProcessor.getLogicalPageNumber(page)}" rendered="#{MetadataProcessor.isAccessGranted(filePath)}">
                                 <p:commandLink update="structureTreeForm, imagePreviewForm">
-                                    <img src="#{request.contextPath}#{Metadaten.getThumbnail(filePath)}" class="thumbnail #{Metadaten.currentImage eq filePath ? 'active' : ''}"/>
-                                    <f:setPropertyActionListener value="#{filePath}" target="#{Metadaten.currentImage}"/>
-                                    <f:setPropertyActionListener value="#{page}" target="#{Metadaten.myStrukturelement}"/>
+                                    <img src="#{request.contextPath}#{MetadataProcessor.getThumbnail(filePath)}" class="thumbnail #{MetadataProcessor.currentImage eq filePath ? 'active' : ''}"/>
+                                    <f:setPropertyActionListener value="#{filePath}" target="#{MetadataProcessor.currentImage}"/>
+                                    <f:setPropertyActionListener value="#{page}" target="#{MetadataProcessor.myStrukturelement}"/>
                                 </p:commandLink>
                             </p:panel>
                             <p:draggable id="structuredPagesDraggable" for="imagePreviewForm:structuredPages:#{currentElement.rowIndex}:structureElementDataList:#{structuredThumbnail.rowIndex}:structuredPagePanel"
                                          revert="true" stack=".ui-panel"/>
                         </p:dataList>
                         <p:droppable id="structuredPagesDroppable" for="imagePreviewForm:structuredPages:#{currentElement.rowIndex}:structureElementDataList">
-                            <p:ajax listener="#{Metadaten.onPageDrop}" update="imagePreviewForm, structureTreeForm:docStruct"/>
+                            <p:ajax listener="#{MetadataProcessor.onPageDrop}" update="imagePreviewForm, structureTreeForm:docStruct"/>
                         </p:droppable>
                     </p:dataList>
                 </p:fieldset>
             </ui:fragment>
 
             <!-- Pages in UNstructured view -->
-            <ui:fragment rendered="#{Metadaten.viewMode eq 'grid' and Metadaten.imageListExistent}">
+            <ui:fragment rendered="#{MetadataProcessor.viewMode eq 'grid' and MetadataProcessor.imageListExistent}">
                 <div class="thumbnailWrapper">
-                    <ui:repeat value="#{Metadaten.images}" var="image">
-                        <p:commandLink update="imagePreviewForm" rendered="#{Metadaten.isAccessGranted(image)}">
+                    <ui:repeat value="#{MetadataProcessor.images}" var="image">
+                        <p:commandLink update="imagePreviewForm" rendered="#{MetadataProcessor.isAccessGranted(image)}">
                             <!-- outputText is needed to remove whitespace produced by correct code indent -->
-                            <h:outputText><img class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{request.contextPath}#{Metadaten.getThumbnail(image)}"/></h:outputText>
-                            <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
+                            <h:outputText><img class="thumbnail #{MetadataProcessor.currentImage eq image ? 'active' : ''}" src="#{request.contextPath}#{MetadataProcessor.getThumbnail(image)}"/></h:outputText>
+                            <f:setPropertyActionListener value="#{image}" target="#{MetadataProcessor.currentImage}"/>
                         </p:commandLink>
                         <!-- FIXME: primefaces does not find the image, need to prefix the path with 'window.location.host'! -->
                         <!--<p:graphicImage styleClass="thumbnail" name="#{image}" alt="#{image}" title="#{image}"/>-->
@@ -111,23 +110,23 @@
             </ui:fragment>
 
             <!-- View current page with OpenLayers -->
-            <ui:fragment rendered="#{Metadaten.viewMode eq 'preview' and Metadaten.imageListExistent}">
+            <ui:fragment rendered="#{MetadataProcessor.viewMode eq 'preview' and MetadataProcessor.imageListExistent}">
                 <!-- OpenLayers Kitodo custom controls -->
                 <div id="olWrapper" style="overflow-x: auto; height: 100%">
                     <div id="thumbnailStripe" style="width: 100px; display: inline-block; float: right">
-                        <ui:repeat value="#{Metadaten.images}" var="image">
+                        <ui:repeat value="#{MetadataProcessor.images}" var="image">
                             <div>
-                                <p:commandLink update="imagePreviewForm, galleryHeadingWrapper" rendered="#{Metadaten.isAccessGranted(image)}">
+                                <p:commandLink update="imagePreviewForm, galleryHeadingWrapper" rendered="#{MetadataProcessor.isAccessGranted(image)}">
                                     <!-- outputText is needed to remove whitespace produced by correct code indent -->
-                                    <h:outputText><img style="display: inline;" class="thumbnail #{Metadaten.currentImage eq image ? 'active' : ''}" src="#{request.contextPath}#{Metadaten.getThumbnail(image)}"/></h:outputText>
-                                    <f:setPropertyActionListener value="#{image}" target="#{Metadaten.currentImage}"/>
+                                    <h:outputText><img style="display: inline;" class="thumbnail #{MetadataProcessor.currentImage eq image ? 'active' : ''}" src="#{request.contextPath}#{MetadataProcessor.getThumbnail(image)}"/></h:outputText>
+                                    <f:setPropertyActionListener value="#{image}" target="#{MetadataProcessor.currentImage}"/>
                                 </p:commandLink>
                             </div>
                             <!-- FIXME: primefaces does not find the image, need to prefix the path with 'window.location.host'! -->
                             <!--<p:graphicImage styleClass="thumbnail" name="#{image}" alt="#{image}" title="#{image}"/>-->
                         </ui:repeat>
                     </div>
-                    <ui:fragment rendered="#{Metadaten.isAccessGranted(Metadaten.currentImage)}">
+                    <ui:fragment rendered="#{MetadataProcessor.isAccessGranted(MetadataProcessor.currentImage)}">
                         <h:outputStylesheet name="webjars/openlayers/4.5.0/ol.css"/>
                         <h:outputScript name="js/ol_custom.js"/>
                         <div id="map" class="map" style="width: calc(100% - 100px); height: 100%; display: inline-block; float: left"/>
